almost finished majors/videos page! just some spacing issues left to fix

--- a/src/layout/components/MajorPage/style.scss
+++ b/src/layout/components/MajorPage/style.scss
@@ -4,62 +4,60 @@
 .major-page {
   &-hero {
     background-color: $color-background-grey;
-    margin: 3rem -7rem -3rem -7rem;
+    margin: 3rem -7rem -3rem;
     padding: 5rem 7rem;
   }
 
+  &-hero-content {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: space-between;
+  }
+
+  &-hero-text {
+    flex: 1 1 500px;
+    max-width: 1000px;
+  }
+
+  &-hero-image {
+    height: auto;
+    max-width: 350px;
+  }
+
+  &-hero-buttons {
+    display: flex;
+    gap: 1.5rem;
+    margin-top: 2rem;
+  }
+
   &-title {
-    @include font-heading-1;
+    @include font-heading-1-kefir;
   }
 
   &-text {
     @include font-text;
-    margin-top: 1.5rem;
-    padding-right: 30rem;
     line-height: 1.75;
+    margin-top: 1.5rem;
   }
 
   &-subheading {
-    @include font-heading-2;
+    @include font-heading-2-kefir;
   }
-
-  &-sidebar {
-    align-self: start;
-    flex-basis: 300px;
-    flex-grow: 1;
-    position: sticky;
-    top: calc(5.25rem + 2.25rem); // Header + Top Margin Heights
-  }
-
-  &-mobile-navigation {
-    display: none;
-
-    .dropdown-root {
-      height: 2.5rem;
-
-      .dropdown-control {
-        border-radius: 4px;
-      }
-
-      .dropdown-arrow {
-        margin-top: 0.25rem;
-      }
-    }
-  }
-
+  
   &-cards {
-    margin-top: 1rem;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    margin-top: 2rem;
+    padding: 2rem 0;
   }
 
   &-content {
     background-color: $color-tag-white;
     margin: 3rem -7rem -3rem;
     padding: 3rem 7rem;
-  }
-
-  &-scroll-content {
-    display: flex;
-    margin-top: 2.25rem;
   }
 
   &-link {
@@ -72,23 +70,46 @@
     width: 18rem;
   }
 
+  .btn-orange {
+    background-color: #ff8c66;
+    border-radius: 0.5rem;
+    color: color-tag-white;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 1rem 2rem;
+  }
+
+  .btn-blue {
+    background-color: #77c5e7;
+    border-radius: 0.5rem;
+    color: color-tag-white;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 1rem 2rem;
+  }
+
   @media(max-width: $site-size-small) {
-    &-sidebar {
-      display: none;
+    &-hero-content {
+      align-items: flex-start;
+      flex-direction: column;
     }
 
     &-mobile-navigation {
       display: unset;
     }
-  
+
     &-content {
       margin: 1.5rem -1.5rem -1.5rem;
       padding: 1.5rem;
     }
-  
-    &-scroll-content {
-      flex-direction: column;
-      margin-top: 1rem;
+
+    &-hero-image {
+      max-width: 100%;
+    }
+
+    &-cards {
+      grid-template-columns: 1fr;
+      padding: 1rem 0;
     }
   }
 }
